# flax-rl-practice

./: pyproject.toml
.devcontainer/: devcontainer.json
src/: arr_example.py  cnn.py  main.py  mnist.py  train.py
src/modules/: model.py  wrapper.py
